# especializacao-2024-event-manager-system

./: CMakeLists.txt  EventManagerSystem.cpp  EventManagerSystem.h  main.cpp
